with-registry/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-registry
  labels:
    app: nginx-registry
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx-registry
  template:
    metadata:
      labels:
        app: nginx-registry
    spec:
      containers:
        - name: nginx-registry
          image: k3d-registry.localhost:12345/nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-registry-service
spec:
  selector:
    app: nginx-registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
